--- a/profile.html
+++ b/profile.html
@@ -372,7 +372,7 @@
     </form>
 </div>
 
-<footer class="page-footer font-small footer-color pt-4">
+<footer class="page-footer font-small blue pt-4">
     <!-- Footer Links -->
     <div class="container-fluid text-center text-md-left">
         <!-- Grid row -->
@@ -382,28 +382,23 @@
                 <!-- Content -->
                 <h5 class="text-uppercase">Come vendere</h5>
                 <p>Per vendere un prodotto è necessario essere iscritti alla piattaforma.
-                    <br>Dopo aver effettuato il login, tramite il bottone posizionato nella <a class="link-footer"
-                                                                                               href="index.html">home</a>.
-                    <br>Lì verranno chiesti i dati e fornite le spiegazioni necessarie.</p>
+                <br>Dopo aver effettuato il login, tramite il bottone posizionato nella <a class="link-footer" href="index.html">home</a>.
+                <br>Lì verranno chiesti i dati e fornite le spiegazioni necessarie.</p>
 
             </div>
             <!-- Grid column -->
             <hr class="clearfix w-100 d-md-none pb-3">
             <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3">
+            <div class="col-md-3 mb-md-0 mb-3 footer-left">
                 <!-- Links -->
                 <h5 class="text-uppercase">Chi siamo | Contattaci</h5>
 
                 <ul class="list-unstyled">
                     <li>
-                        <a class="link-footer" href="https://github.com/lynerist">Leonardo Albani</a> | <a
-                            class="link-footer"
-                            href="mailto:leonardo.albani@studenti.unimi.it">leonardo.albani@studenti.unimi.it</a>
+                        <a class="link-footer" href="https://github.com/lynerist" target="_blank">Leonardo Albani</a> | <a class="link-footer" href="mailto:leonardo.albani@studenti.unimi.it">leonardo.albani@studenti.unimi.it</a>
                     </li>
                     <li>
-                        <a class="link-footer" href="https://github.com/FilippoUslenghi">Filippo Uslenghi</a> | <a
-                            class="link-footer"
-                            href="mailto:filippo.uslenghi@studenti.unimi.it">filippo.uslenghi@studenti.unimi.it</a>
+                        <a class="link-footer" href="https://github.com/FilippoUslenghi" target="_blank">Filippo Uslenghi</a> | <a class="link-footer" href="mailto:filippo.uslenghi@studenti.unimi.it">filippo.uslenghi@studenti.unimi.it</a>
                     </li>
                 </ul>
             </div>
@@ -413,8 +408,7 @@
                 <!-- Links -->
                 <h5 class="text-uppercase">Cookies</h5>
 
-                <p>Questo sito fa uso di cookie per migliorare l’esperienza di navigazione degli utenti. Utilizziamo
-                    solo cookie tecnici. Proseguendo nella navigazione si accetta l’uso dei cookie.</p>
+                <p>Questo sito fa uso di cookie per migliorare l’esperienza di navigazione degli utenti. Utilizziamo solo cookie tecnici. Proseguendo nella navigazione si accetta l’uso dei cookie.</p>
             </div>
             <!-- Grid column -->
         </div>
