--- a/profile.html
+++ b/profile.html
@@ -149,7 +149,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary btn-outline-danger" data-dismiss="modal">Annulla</button>
-                                        <button type="button" class="btn btn-primary btn-outline-success">Save changes</button>
+                                        <button type="button" class="btn btn-primary btn-outline-success">Salva modifiche</button>
                                     </div>
                                 </div>
                             </div>
