--- a/watched.html
+++ b/watched.html
@@ -82,22 +82,30 @@
                         <div class="font-size-sm" id="tempoUsura1"><span class="text-muted mr-2"><b>Nuovo</b></span>
                         </div>
                         <div class="font-size-lg text-primary pt-2" id="prezzo1">€125.00</div>
+                        <div class="non-osservare">
+                            <button type="button" class="btn btn-secondary btn-outline-danger btn-sm" data-dismiss="modal" id="rimuovi1" onclick="rimuovi(id, 'annulla1')">Rimuovi</button>
+                            <button type="button" class="btn btn-secondary btn-outline-warning btn-sm" data-dismiss="modal" id="annulla1"onclick="rimuovi(id, 'rimuovi1')">Annulla</button>                                                        
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6 destra">
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
-                            alt="Product" id="foto2"></a>
+                            alt="Product" id="foto1"></a>
                     <div class="media-body pt-3">
-                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo2"><a href="#"
+                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="#"
                                 target="_blank">Calvin Klein Jeans Keds</a></h3>
-                        <div class="font-size-sm" id="prodotto2"><span
+                        <div class="font-size-sm" id="prodotto1"><span
                                 class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
-                        <div class="font-size-sm" id="tempoUsura2"><span class="text-muted mr-2"><b>Nuovo</b></span>
+                        <div class="font-size-sm" id="tempoUsura1"><span class="text-muted mr-2"><b>Nuovo</b></span>
                         </div>
-                        <div class="font-size-lg text-primary pt-2" id="prezzo2">€125.00</div>
+                        <div class="font-size-lg text-primary pt-2" id="prezzo1">€125.00</div>
+                        <div class="non-osservare">
+                            <button type="button" class="btn btn-secondary btn-outline-danger btn-sm" data-dismiss="modal" id="rimuovi2" onclick="rimuovi(id, 'annulla2')">Rimuovi</button>
+                            <button type="button" class="btn btn-secondary btn-outline-warning btn-sm" data-dismiss="modal" id="annulla2"onclick="rimuovi(id, 'rimuovi2')">Annulla</button>                                                        
+                        </div>
                     </div>
                 </div>
             </div>
@@ -107,15 +115,61 @@
             <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
-                            alt="Product" id="foto3"></a>
+                            alt="Product" id="foto1"></a>
+                    <div class="media-body pt-3">
+                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="#"
+                                target="_blank">Calvin Klein Jeans Keds</a></h3>
+                        <div class="font-size-sm" id="prodotto1"><span
+                                class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
+                        <div class="font-size-sm" id="tempoUsura1"><span class="text-muted mr-2"><b>Nuovo</b></span>
+                        </div>
+                        <div class="font-size-lg text-primary pt-2" id="prezzo1">€125.00</div>
+                        <div class="non-osservare">
+                            <button type="button" class="btn btn-secondary btn-outline-danger btn-sm" data-dismiss="modal" id="rimuovi3" onclick="rimuovi(id, 'annulla3')">Rimuovi</button>
+                            <button type="button" class="btn btn-secondary btn-outline-warning btn-sm" data-dismiss="modal" id="annulla3"onclick="rimuovi(id, 'rimuovi3')">Annulla</button>                                                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Item-->
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
+                <div class="media d-block d-sm-flex text-center text-sm-left">
+                    <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
+                            alt="Product" id="foto1"></a>
+                    <div class="media-body pt-3">
+                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="#"
+                                target="_blank">Calvin Klein Jeans Keds</a></h3>
+                        <div class="font-size-sm" id="prodotto1"><span
+                                class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
+                        <div class="font-size-sm" id="tempoUsura1"><span class="text-muted mr-2"><b>Nuovo</b></span>
+                        </div>
+                        <div class="font-size-lg text-primary pt-2" id="prezzo1">€125.00</div>
+                        <div class="non-osservare">
+                            <button type="button" class="btn btn-secondary btn-outline-danger btn-sm" data-dismiss="modal" id="rimuovi4" onclick="rimuovi(id, 'annulla4')">Rimuovi</button>
+                            <button type="button" class="btn btn-secondary btn-outline-warning btn-sm" data-dismiss="modal" id="annulla4"onclick="rimuovi(id, 'rimuovi4')">Annulla</button>                                                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12 d-flex flex-row row">
+            <!-- Item-->
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
+                <div class="media d-block d-sm-flex text-center text-sm-left">
+                    <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
+                            alt="Product" id="foto1"></a>
                     <div class="media-body pt-3">
                         <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo3"><a href="#"
                                 target="_blank">Calvin Klein Jeans Keds</a></h3>
-                        <div class="font-size-sm" id="prodotto3"><span
+                        <div class="font-size-sm" id="prodotto1"><span
                                 class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
-                        <div class="font-size-sm" id="tempoUsura3"><span class="text-muted mr-2"><b>Nuovo</b></span>
+                        <div class="font-size-sm" id="tempoUsura1"><span class="text-muted mr-2"><b>Nuovo</b></span>
                         </div>
-                        <div class="font-size-lg text-primary pt-2" id="prezzo3">€125.00</div>
+                        <div class="font-size-lg text-primary pt-2" id="prezzo1">€125.00</div>
+                        <div class="non-osservare">
+                            <button type="button" class="btn btn-secondary btn-outline-danger btn-sm" data-dismiss="modal" id="rimuovi5" onclick="rimuovi(id, 'annulla5')">Rimuovi</button>
+                            <button type="button" class="btn btn-secondary btn-outline-warning btn-sm" data-dismiss="modal" id="annulla5"onclick="rimuovi(id, 'rimuovi5')">Annulla</button>                                                        
+                        </div>
                     </div>
                 </div>
             </div>
@@ -123,49 +177,19 @@
             <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
-                            alt="Product" id="foto4"></a>
+                            alt="Product" id="foto1"></a>
                     <div class="media-body pt-3">
-                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo4"><a href="#"
+                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="#"
                                 target="_blank">Calvin Klein Jeans Keds</a></h3>
-                        <div class="font-size-sm" id="prodotto4"><span
+                        <div class="font-size-sm" id="prodotto1"><span
                                 class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
-                        <div class="font-size-sm" id="tempoUsura4"><span class="text-muted mr-2"><b>Nuovo</b></span>
+                        <div class="font-size-sm" id="tempoUsura1"><span class="text-muted mr-2"><b>Nuovo</b></span>
                         </div>
-                        <div class="font-size-lg text-primary pt-2" id="prezzo4">€125.00</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-12 d-flex flex-row row">
-            <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
-                <div class="media d-block d-sm-flex text-center text-sm-left">
-                    <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
-                            alt="Product" id="foto5"></a>
-                    <div class="media-body pt-3">
-                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo5"><a href="#"
-                                target="_blank">Calvin Klein Jeans Keds</a></h3>
-                        <div class="font-size-sm" id="prodotto5"><span
-                                class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
-                        <div class="font-size-sm" id="tempoUsura5"><span class="text-muted mr-2"><b>Nuovo</b></span>
+                        <div class="font-size-lg text-primary pt-2" id="prezzo1">€125.00</div>
+                        <div class="non-osservare">
+                            <button type="button" class="btn btn-secondary btn-outline-danger btn-sm" data-dismiss="modal" id="rimuovi6" onclick="rimuovi(id, 'annulla6')">Rimuovi</button>
+                            <button type="button" class="btn btn-secondary btn-outline-warning btn-sm" data-dismiss="modal" id="annulla6"onclick="rimuovi(id, 'rimuovi6')">Annulla</button>                                                        
                         </div>
-                        <div class="font-size-lg text-primary pt-2" id="prezzo5">€125.00</div>
-                    </div>
-                </div>
-            </div>
-            <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
-                <div class="media d-block d-sm-flex text-center text-sm-left">
-                    <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
-                            alt="Product" id="foto6"></a>
-                    <div class="media-body pt-3">
-                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo6"><a href="#"
-                                target="_blank">Calvin Klein Jeans Keds</a></h3>
-                        <div class="font-size-sm" id="prodotto6"><span
-                                class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
-                        <div class="font-size-sm" id="tempoUsura6"><span class="text-muted mr-2"><b>Nuovo</b></span>
-                        </div>
-                        <div class="font-size-lg text-primary pt-2" id="prezzo6">€125.00</div>
                     </div>
                 </div>
             </div>
@@ -228,6 +252,7 @@
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/regioneProvincia.js"></script>
     <script src="js/owl.carousel.js"></script>
+    <script src="js/bottoni.js"></script>
 </body>
 
 </html>
