--- a/watched.html
+++ b/watched.html
@@ -70,7 +70,7 @@
     <div class="container pb-5 mt-n2 mt-md-n3 drop-shadow">
         <div class="col-md-12 d-flex flex-row row">
             <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6" id="1">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
                             alt="Product" id="foto1"></a>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6" id="2">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
                             alt="Product" id="foto1"></a>
@@ -112,7 +112,7 @@
         </div>
         <div class="col-md-12 d-flex flex-row row">
             <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6" id="3">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
                             alt="Product" id="foto1"></a>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6" id="4">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
                             alt="Product" id="foto1"></a>
@@ -154,7 +154,7 @@
         </div>
         <div class="col-md-12 d-flex flex-row row">
             <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6" id="5">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
                             alt="Product" id="foto1"></a>
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <!-- Item-->
-            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6">
+            <div class="justify-content-between my-4 pb-4 border-bottom col-md-6" id="6">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
                     <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
                             alt="Product" id="foto1"></a>
