--- a/profile.html
+++ b/profile.html
@@ -62,6 +62,9 @@
     </div>
 </nav>
 
+
+<h1 class="title-watched container">Profilo</h1>
+
 <div class="container emp-profile drop-shadow">
     <form method="post">
         <div class="row">
