--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
 </nav>
 
 
-<h1 class="title-watched container">Profilo</h1>
+<h1 class="title-watched container">Profillo</h1>
 
 <div class="container emp-profile drop-shadow">
     <form method="post">
