--- a/watched.html
+++ b/watched.html
@@ -66,7 +66,7 @@
         </div>
     </nav>
 
-    <h1 class="title-watched container">Annunci osservati</h1>
+    <h1 class="title-watched container">Annunci osservati da pino</h1>
     <div class="container pb-5 mt-n2 mt-md-n3 drop-shadow">
         <div class="col-md-12 d-flex flex-row row">
             <!-- Item-->
