ho provato a sistemare i dettagli ma mi hanno solo fatto venire una crisi di nervi, dobbiamoriguardarla insieme

--- a/annuncio.html
+++ b/annuncio.html
@@ -65,10 +65,10 @@
 	<h1 class="title-watched container">Annunci osservati da pino che deve decidere quale prodotto comprare a natale da
 		associare al cane che vuole vendere</h1>
 
-	<div class="container dark-grey-text mt-4">
+	<div class="container dark-grey-text mt-4 drop-shadow mb-5">
 		<div class="row">
-			<div class="col-md-6">
-				<img src="img/lidl.jpeg" class="img-fluid">
+			<div class="col-md-5">
+				<img src="img/lidl.jpeg" class="img-fluid img-thumbnail rounded mt-3 mx-auto" alt="immagine annuncio">
 			</div>
 			<div class="col-md-6 mb-4 box-info">
 				<div class="luogo">Lombardia, Brescia, Brescia</div>
@@ -99,10 +99,7 @@
 				<div>l'annuncio scade fra 3 giorni</div>
 			</div>
 		</div>
-		<!--Grid row-->
-
 	</div>
-	<!--Main layout-->
 
 	<footer class="page-footer font-small blue pt-4">
 		<!-- Footer Links -->
