--- a/annuncio.html
+++ b/annuncio.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/products.css">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+	<link rel="stylesheet"  type="text/css" href="css/annuncio.css">
 </head>
 
 <body>
@@ -85,18 +86,17 @@
 		<div class="row d-flex justify-content-center">
 			<div class="col-md-6 text-center"><h4 class="my-4 h4">DETTAGLI</h4></div>
 		</div>
-		<div class="row">
-			<div class="col-lg-4 col-md-4 mb-4">
-				<div class="lead mb-3">Categoria</div>
+		<div class="row info-post">
+			<div class="col-md-4 mb-5">
+				<div class="lead">Categoria</div>
 				<div>Sottocategoria</div>
 			</div>
-			<div class="col-lg-4 col-md-4 mb-4">
-				<div>la garanzia scade il 5/5/70</div>
+			<div class="col-md-4 mb-5">
+				<div><i>In garanzia fino al 5/5/70</i></div>
 			</div>
-			<div class="col-lg-4 col-md-4 mb-4">
-				<div class="lead mb-3">Pubblicato il</div>
-				<div>10/6/2020 ore 15:28</div>
-				<div>l'annuncio scade fra 3 giorni</div>
+			<div class="col-md-4 mb-5">
+				<div class="lead">Scade fra 3 giorni</div>
+				<div>Pubblicato il: 10/6/2020 ore 15:28</div>
 			</div>
 		</div>
 	</div>
