--- a/annuncio.html
+++ b/annuncio.html
@@ -66,7 +66,7 @@
 	<h1 class="title-watched container">Annunci osservati da pino che deve decidere quale prodotto comprare a natale da
 		associare al cane che vuole vendere</h1>
 
-	<div class="container dark-grey-text mt-4 drop-shadow mb-5">
+	<div class="container dark-grey-text mt-4 drop-shadow mb-5"> <!--personalizzare il colore dell'ombra in base allo stato annuncio con php-->
 		<div class="row">
 			<div class="col-md-5">
 				<img src="img/lidl.jpeg" class="img-fluid img-thumbnail rounded mt-3 mx-auto" alt="immagine annuncio">
@@ -80,6 +80,7 @@
 				<div class="font-italic mt-5">osservato da 59 persone</div>
 				<button type="button" class="destra btn btn-secondary btn-outline-success btn-sm mt-5" data-dismiss="modal" >Compra</button>
 				<button type="button" class="destra btn btn-secondary btn-outline-primary btn-sm mt-5" data-dismiss="modal" >Osserva</button>
+				<!--TODO Personalizzare i bottoni in base statoAnnuncio con php-->
 			</div>
 		</div>
 		<hr>
