--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 <script src="js/jquery-3.3.1.slim.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
-<script src="js/prodotti.js"></script>
+<script src="js/carosello.js"></script>
 <script src="js/regioneProvincia.js"></script>
 <script src="js/owl.carousel.js"></script>
 </body>
