--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/profile.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <link rel="stylesheet" type="text/css" href="css/posts.css">
+    <link rel="stylesheet" type="text/css" href="css/watched.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -234,9 +234,9 @@
                                     <!-- Item-->
                                     <div class="d-sm-flex justify-content-between my-4 pb-4 border-bottom">
                                         <div class="media d-block d-sm-flex text-center text-sm-left">
-                                            <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg" alt="Product" id="foto1"></a>
+                                            <a class="cart-item-thumb mx-auto mr-sm-4" href="annuncio.html" target="_blank"><img src="img/lidl.jpeg" alt="Product" id="foto1"></a>
                                             <div class="media-body pt-3">
-                                                <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="#" target="_blank">Calvin Klein Jeans Keds</a></h3>
+                                                <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="annuncio.html" target="_blank">Calvin Klein Jeans Keds</a></h3>
                                                 <div class="font-size-sm" id="prodotto1"><span class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
                                                 <div class="font-size-sm" id="tempoUsura1"><span class="text-muted mr-2"><b>Nuovo</b></span></div>
                                                 <div class="font-size-lg text-primary pt-2" id="prezzo1">€125.00</div>
