--- a/watched.html
+++ b/watched.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" type="text/css" href="css/profile.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <link rel="stylesheet" type="text/css" href="css/posts.css">
+    <link rel="stylesheet" type="text/css" href="css/watched.css">
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html"><img src="img/bee.svg" class="icon-bee"
                 alt="bee"><span>Be</span><span>e-Market</span></a>
@@ -67,15 +68,17 @@
     </nav>
 
     <h1 class="title-watched container">Annunci osservati da pino</h1>
+
+
     <div class="container pb-5 mt-n2 mt-md-n3 drop-shadow">
         <div class="col-md-12 d-flex flex-row row">
             <!-- Item-->
             <div class="justify-content-between my-4 pb-4 border-bottom col-md-6" id="1">
                 <div class="media d-block d-sm-flex text-center text-sm-left">
-                    <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg"
+                    <a class="cart-item-thumb mx-auto mr-sm-4" href="annuncio.html" target="_blank"><img src="img/lidl.jpeg"
                             alt="Product" id="foto1"></a>
                     <div class="media-body pt-3">
-                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="#"
+                        <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="annuncio.html"
                                 target="_blank">Calvin Klein Jeans Keds</a></h3>
                         <div class="font-size-sm" id="prodotto1"><span
                                 class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
@@ -196,6 +199,7 @@
         </div>
     </div>
 
+
     <!-- Footer -->
     <footer class="page-footer font-small blue pt-4">
         <!-- Footer Links -->
@@ -247,11 +251,11 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
+
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/regioneProvincia.js"></script>
-    <script src="js/owl.carousel.js"></script>
     <script src="js/bottoni.js"></script>
 </body>
 
