--- a/profile.html
+++ b/profile.html
@@ -162,7 +162,7 @@
                         Acquirente e Babao
                     </h6>
                     <p class="profile-rating">PUNTEGGIO ACQUIRENTE:</p>
-                    <ul class="rating">
+                    <ul class="rating p-0">
                         <li>
                             <i class="fas fa-star fa-sm text-primary orange-color"></i>
                         </li>
@@ -178,12 +178,12 @@
                         <li>
                             <i class="fas fa-star-half-alt fa-sm text-primary orange-color"></i>
                         </li>
-                        <span class="ml-1">4.9/5.0
+                        <li class="ml-1">
                             <label class="material-tooltip-main card-link orange-color" data-toggle="tooltip" data-placement="top" title="Read reviews">(542 reviews)</label>
-                        </span>
+                        </li>
                     </ul>
                     <p class="profile-rating">PUNTEGGIO VENDITORE</p>
-                    <ul class="rating">
+                    <ul class="rating p-0">
                         <li>
                             <i class="fas fa-star fa-sm text-primary orange-color"></i>
                         </li>
@@ -199,9 +199,9 @@
                         <li>
                             <i class="fas fa-star-half-alt fa-sm text-primary orange-color"></i>
                         </li>
-                        <span class="ml-1">4.9/5.0
+                        <li class="ml-1">
                             <label class="material-tooltip-main card-link orange-color" data-toggle="tooltip" data-placement="top" title="Read reviews">(542 reviews)</label>
-                        </span>
+                        </li>
                     </ul>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
@@ -425,7 +425,7 @@
     <!-- Copyright -->
 </footer>
 
-<script src="js/jquery-3.3.1.slim.min.js"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/regioneProvincia.js"></script>
