--- a/annuncio.html
+++ b/annuncio.html
@@ -159,7 +159,7 @@
 		<!-- Copyright -->
 	</footer>
 	<!-- Footer -->
-	<script src="js/jquery-3.3.1.slim.min.js"></script>
+	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.js"></script>
 	<script src="js/bootstrap.bundle.js"></script>
 	<script src="js/regioneProvincia.js"></script>
