--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 </footer>
 <!-- Footer -->
 
-<script src="js/jquery-3.3.1.slim.min.js"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/carosello.js"></script>
