--- a/risultati.html
+++ b/risultati.html
@@ -156,7 +156,7 @@
                 </div>
             </section>
             <section class="panel">
-                <header class="card-header">Price Range</header>
+                <header class="card-header">Logarithmic Price Range</header>
                 <!-- Section: Price version 2 -->
                 <section class="mb-4">
             
@@ -525,7 +525,7 @@
 
 
 
-<script src="js/jquery-3.3.1.slim.min.js"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/regioneProvincia.js"></script>
