--- a/watched.html
+++ b/watched.html
@@ -252,7 +252,7 @@
     </footer>
     <!-- Footer -->
 
-    <script src="js/jquery-3.3.1.slim.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/regioneProvincia.js"></script>
