--- a/operazioni.html
+++ b/operazioni.html
@@ -462,19 +462,19 @@
                                 </ul>
                             </div>
                             <div class="font-size-sm pb-3" id="prodotto1"><span class="text-muted mr-2">Pagamento:</span>Carta di credito</div>
-                            <div class="container">
-                                <div class="starrating risingstar d-flex flex-row-reverse">
-                                    <div class="ml-auto">
-                                        <button type="button" class="btn btn-sm btn-outline-success mr-1">Conferma</button>
-                                    </div>
-                                    <input type="radio" id="star5-1" name="rating1" value="5" /><label for="star5-1" title="5 star"><i class="fas fa-star fa-sm"></i></label>
-                                    <input type="radio" id="star4-1" name="rating1" value="4" /><label for="star4-1" title="4 star"><i class="fas fa-star fa-sm"></i></label>
-                                    <input type="radio" id="star3-1" name="rating1" value="3" /><label for="star3-1" title="3 star"><i class="fas fa-star fa-sm"></i></label>
-                                    <input type="radio" id="star2-1" name="rating1" value="2" /><label for="star2-1" title="2 star"><i class="fas fa-star fa-sm"></i></label>
-                                    <input type="radio" id="star1-1" name="rating1" value="1" /><label for="star1-1" title="1 star"><i class="fas fa-star fa-sm"></i></label>
-                                    <span class="mr-3"><i><b>Valuta:</b></i></span>
-                                </div>
+                        </div>
+                    </div>
+                    <div class="media-body pt-3 mt-3">
+                        <div class="starrating risingstar d-flex flex-row-reverse">
+                            <div class="ml-auto">
+                                <button type="button" class="btn btn-sm btn-outline-success mr-1">Conferma</button>
                             </div>
+                            <input type="radio" id="star5-1" name="rating1" value="5" /><label for="star5-1" title="5 star"><i class="fas fa-star fa-sm"></i></label>
+                            <input type="radio" id="star4-1" name="rating1" value="4" /><label for="star4-1" title="4 star"><i class="fas fa-star fa-sm"></i></label>
+                            <input type="radio" id="star3-1" name="rating1" value="3" /><label for="star3-1" title="3 star"><i class="fas fa-star fa-sm"></i></label>
+                            <input type="radio" id="star2-1" name="rating1" value="2" /><label for="star2-1" title="2 star"><i class="fas fa-star fa-sm"></i></label>
+                            <input type="radio" id="star1-1" name="rating1" value="1" /><label for="star1-1" title="1 star"><i class="fas fa-star fa-sm"></i></label>
+                            <span class="mr-3"><i><b>Valuta:</b></i></span>
                         </div>
                     </div>
                 </div>
