--- a/profile.html
+++ b/profile.html
@@ -78,7 +78,7 @@
                     <h5>
                         Rossi Cecilia
                     </h5>
-                    <div>
+                    <div id="myProfile">
                         <!-- Button trigger modal -->
                         <button type="button" class="profile-edit-btn" data-toggle="modal" data-target="#basicExampleModal">
                             Modifica
@@ -96,7 +96,7 @@
                                                 <div class="col-md-4 border-right">
                                                     <div class="profile-img">
                                                         <img src="img/ceciglia_rotta.jpg" alt=""/>
-                                                        <div class="file btn btn-lg x btn-primary">
+                                                        <div class="file btn btn-lg x btn-primary mt-0">
                                                             Cambia foto
                                                             <input type="file" name="file"/>
                                                         </div>
