--- a/annuncio.html
+++ b/annuncio.html
@@ -72,14 +72,97 @@
 				<img src="img/lidl.jpeg" class="img-fluid img-thumbnail rounded mt-3 mx-auto" alt="immagine annuncio">
 			</div>
 			<div class="col-md-6 mb-4 box-info">
+				<div id="myAnnuncio" class="mb-5 container-fluid">
+					<!-- Button trigger modal -->
+					<button type="button" class="annuncio-edit-btn w-100" data-toggle="modal" data-target="#basicExampleModal">
+						Modifica
+					</button>
+					<!-- Modal -->
+					<div class="modal fade modal-only" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog edit-annuncio" role="document">
+							<div class="modal-content">
+								<div class="modal-header arancio">
+									<h5 class="modal-title" id="exampleModalLabel">Modifica profilo</h5>
+								</div>
+								<div class="modal-body">
+									<div class="container rounded bg-white mt-5">
+										<div class="row">
+											<div class="col-md-4 border-right">
+												<div class="annuncio-img">
+													<img src="img/ceciglia_rotta.jpg" alt=""/>
+													<div class="file btn btn-lg x btn-primary mt-0">
+														Cambia foto
+														<input type="file" name="file"/>
+													</div>
+												</div>
+											</div>
+											<div class="col-md-8">
+												<div class="p-3 py-5 no-padding-top form-width">
+													<div class="row mt-2">
+														<div class="col-md-6"><label>Codice Fiscale<input type="text" class="form-control form-custom" placeholder="Codice fiscale" value="" readonly></label></div>
+														<div class="col-md-6"><label>E-mail<input type="text" class="form-control form-custom" placeholder="E-mail" value=""></label></div>
+													</div>
+													<div class="row mt-3">
+														<div class="col-md-6"><label>Nome<input type="text" class="form-control form-custom" placeholder="Nome" value=""></label></div>
+														<div class="col-md-6"><label>Regione<input type="text" class="form-control form-custom" placeholder="Regione" value=""></label></div>
+													</div>
+													<div class="row mt-3">
+														<div class="col-md-6"><label>Cognome<input type="text" class="form-control form-custom" placeholder="Cognome" value=""></label></div>
+														<div class="col-md-6"><label>Provincia<input type="text" class="form-control form-custom" placeholder="Provincia" value=""></label></div>
+													</div>
+													<div class="row mt-3">
+														<div class="col-md-6"><label>Tipo Account<input type="text" class="form-control form-custom" placeholder="" value=""></label></div>
+														<div class="col-md-6"><label>Comune<input type="text" class="form-control form-custom" placeholder="Comune" value=""></label></div>
+													</div>
+													<br>
+													<div class="mb-2">
+														<b>Change Password</b>
+													</div>
+													<div class="row mt-3">
+														<div class="col-md-6">
+															<label>Current Password
+																<input class="form-control form-custom" type="password" placeholder="••••••">
+															</label>
+														</div>
+													</div>
+													<div class="row mt-3">
+														<div class="col-md-6">
+															<label>New Password
+																<input class="form-control form-custom" type="password" placeholder="••••••">
+															</label>
+														</div>
+													</div>
+													<div class="row mt-3">
+														<div class="col-md-6">
+															<label>Confirm <span class="d-none d-xl-inline">Password</span>
+																<input class="form-control form-custom" type="password" placeholder="••••••">
+															</label>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary btn-outline-danger" data-dismiss="modal">Annulla</button>
+									<button type="button" class="btn btn-primary btn-outline-success">Salva modifiche</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<br>
 				<div class="luogo">Lombardia, Brescia, Brescia</div>
 				<div class="lead">$100</div>
 				<div class="lead mb-3">Prodotto</div>
 				<div class="font-weight-bold mb-3">Nuovo/Usato</div>
-				<div class="mb-5">Ottime condizioni forse</div>
+				<div class="mb-5">Ottime condizioni</div>
 				<div class="font-italic mt-5">osservato da 59 persone</div>
+				<div class="mt-3">Venduto da: <a class="link-profile" href="profile.html" target="_blank">Nome Cognome</a></div>
 				<button type="button" class="destra btn btn-secondary btn-outline-success btn-sm mt-5" data-dismiss="modal" >Compra</button>
-				<button type="button" class="destra btn btn-secondary btn-outline-primary btn-sm mt-5" data-dismiss="modal" >Osserva</button>
+				<button type="button" class="destra btn btn-secondary btn-outline-primary btn-sm mt-5" data-dismiss="modal" id="osserva" onclick="rimuovi(id, 'annulla')">Osserva</button>
+				<button type="button" class="destra btn btn-secondary btn-outline-warning btn-sm annulla mt-5" data-dismiss="modal" id="annulla" onclick="rimuovi(id, 'osserva')">Annulla</button>
 				<!--TODO Personalizzare i bottoni in base statoAnnuncio con php-->
 			</div>
 		</div>
@@ -164,7 +247,6 @@
 	<script src="js/bootstrap.bundle.js"></script>
 	<script src="js/regioneProvincia.js"></script>
 	<script src="js/bottoni.js"></script>
-
 </body>
 
 </html>
